--- a/views/views.xml
+++ b/views/views.xml
@@ -14,28 +14,20 @@
                         <group>
                             
                             <field name="currency_id" invisible="1"/>
+                            <field name="product_id" required="1" context="{'default_can_be_expensed': 1, 'tree_view_ref': 'hr_expense.product_product_expense_tree_view'}"
+                                   widget="many2one_barcode"
+                            />
+                            <field name="quantity"/>
                             <field name="amount" required="1" widget="monetary" options="{'currency_field':'currency_id'}"/>
+                            <field name="total_amount"/>
                             <field name="date" required="1"/>
                         </group>
                         <group>
-                            <field name="tag_ids" widget="many2many_tags"
-                                    context="{'default_type_move':type_move}"
-                                    attrs="{'readonly':[('amount','&lt;',50)]}"
-                                    options="{'no_quick_create':True,'no_create_edit':True}"/>
-                            <field name="category_id" 
-                                    attrs="{'required':[('amount','&gt;',100)]}"
-                                    domain="[('type_move','=', type_move)]" 
-                                    options="{'no_open':True}"
-                                    context="{'default_type_move':type_move,'default_name':'Nueva categoria'}"/>
                             <field name="user_id" groups="agriterra_movil_backend.res_groups_administrador"/>
                             <field name="email" groups="agriterra_movil_backend.res_groups_administrador"/>
                         </group>
                     </group>
-                    <group>
-                        <field name="notas"/>
-                        <field name="receipt_image" widget="image"
-                                attrs="{'invisible':[('type_move','=','ingreso')]}"/>
-                    </group>
+                    
                 </sheet>
                 <div class="oe_chatter">
                     <field name="message_ids" widget="mail_thread"/>
@@ -58,27 +50,18 @@
                         <group>
                             
                             <field name="currency_id" invisible="1"/>
+                            <field name="product_id" required="1" context="{'default_can_be_expensed': 1, 'tree_view_ref': 'hr_expense.product_product_expense_tree_view'}"
+                                   widget="many2one_barcode"
+                            />
+                            <field name="quantity" class="oe_inline"/>
                             <field name="amount" required="1" widget="monetary" options="{'currency_field':'currency_id'}"/>
+                            <field name="total_amount"/>
                             <field name="date" required="1"/>
                         </group>
                         <group>
-                            <field name="tag_ids" widget="many2many_tags"
-                                    context="{'default_type_move':type_move}"
-                                    attrs="{'readonly':[('amount','&lt;',50)]}"
-                                    options="{'no_quick_create':True,'no_create_edit':True}"/>
-                            <field name="category_id" 
-                                    attrs="{'required':[('amount','&gt;',100)]}"
-                                    domain="[('type_move','=', type_move)]" 
-                                    options="{'no_open':True}"
-                                    context="{'default_type_move':type_move,'default_name':'Nueva categoria'}"/>
                             <field name="user_id"/>
                             <field name="email"/>
                         </group>
-                    </group>
-                    <group>
-                        <field name="notas"/>
-                        <field name="receipt_image" widget="image"
-                                attrs="{'invisible':[('type_move','=','ingreso')]}"/>
                     </group>
                 </sheet>
                 <div class="oe_chatter">
@@ -96,9 +79,12 @@
                 <field name="date" optional="show"/>
                 <field name="name" />
                 <field name="type_move"  optional="show"/>
+                <field name="quantity" class="oe_inline"/>
+                <field name="product_id" required="1" context="{'default_can_be_expensed': 1, 'tree_view_ref': 'hr_expense.product_product_expense_tree_view'}"
+                                   widget="many2one_barcode"
+                            />
                 <field name="amount" widget="monetary" options="{'currency_field':'currency_id'}"  optional="show"/>
-                <field name="tag_ids" optional="hide" widget="many2many_tags" string="Etiquetas"/>
-                <field name="category_id" optional="hide"/>
+                <field name="total_amount"/>
                 <field name="currency_id" invisible="1"/>
                 <field name="create_uid" groups="agriterra_movil_backend.res_groups_administrador"/>
             </tree>
@@ -113,9 +99,12 @@
                 <field name="date" optional="show"/>
                 <field name="name" />
                 <field name="type_move" invisible="1"/>
+                <field name="product_id" required="1" context="{'default_can_be_expensed': 1, 'tree_view_ref': 'hr_expense.product_product_expense_tree_view'}"
+                                   widget="many2one_barcode"
+                            />
+                <field name="quantity" class="oe_inline"/>
                 <field name="amount" widget="monetary" options="{'currency_field':'currency_id'}"  optional="show"/>
-                <field name="tag_ids" optional="hide" widget="many2many_tags" string="Etiquetas"/>
-                <field name="category_id" optional="hide"/>
+                <field name="total_amount"/>
                 <field name="currency_id" invisible="1"/>
             </tree>
         </field>
@@ -127,9 +116,6 @@
         <field name="arch" type="xml">
             <search>
                 <field name="name"/>
-                <field name="notas"/>
-                <field name="category_id"/>
-                <field name="tag_ids"/>
 
                 <filter name="filter_today" string="Hoy"
                         domain="[('date','&gt;=',datetime.datetime.now().strftime('%Y-%m-%d 00:00:00')),('date','&lt;=',datetime.datetime.now().strftime('%Y-%m-%d 23:59:59'))]"/>
@@ -150,10 +136,6 @@
         <field name="arch" type="xml">
             <search>
                 <field name="name"/>
-                <field name="notas"/>
-                <field name="category_id"/>
-                <field name="tag_ids"/>
-
                 <filter name="filter_tipo_ingresos" 
                         string="Ingresos" 
                         domain="[('type_move','=','ingreso')]"/>
